--- a/crowd-agario/src/App.css
+++ b/crowd-agario/src/App.css
@@ -1,59 +1,43 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .App-header {
-  background-color: #504aa5;
-  min-height: 6vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: #8884D8;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 15vh;
+  height: 15vh;
 }
 
 .App-body {
-  background-color: #f0efff;
-  min-height: 88vh;
+  background-color: #8884D8;
+  height: 85vh;
+  width: 100%;
   display: flex;
-  flex-direction: rows;
-  align-items: flex;
-  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding-left: 4%;
+  margin-top: -1.5%;
+  padding-bottom: 1.5%;
 }
 
-.live-crowd-data {
-  border-style: solid;
-  border-width: 1px;
-  border-color: #8884D8;
-  display: fixed;
-  height: 80vh;
-  width: 40vw;
-  flex-direction: rows !important;
-  align-items: center;
-  justify-content: center;
+.crowd-data {
+  background-color: white;
+  box-shadow: 0 0 10px rgba(238, 229, 255, 0.7);
+  height: 80%;
+  width: 40%;
+  padding: 12px;
 }
 
 .crowd-counter {
   align-self: center;
   vertical-align: bottom
-}
-
-.historic-crowd-data {
-  border-style: solid;
-  border-width: 1px;
-  border-color: #8884D8;
-  display: fixed;
-  height: 80vh;
-  width: 40vw;
-  flex-direction: rows !important;
-  justify-content: right;
 }
 
 .App-link {
@@ -69,17 +53,5 @@
 .trend-chart {
   height: 600px;
   width: 1000px;
-
   align-self: right;
-}
-
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
